added weather app
imported weather app from codesandbox, tested and improved functionality

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+.App {
+  font-family: sans-serif;
+  text-align: center;
+}
+
+.weatherDisplay {
+  list-style: none;
+  padding-left: 0;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 25px;
+}
